add home controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,8 @@
   </head>
 
   <body>
-    <header class="bg-zinc-500 hidden" data-controller="offline">
+    <header class="bg-zinc-500 hidden"
+      data-controller="offline">
       <p class="text-white text-center py-2">You are offline - Content may be outdated</p>
     </header>
 
