--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <div
   data-controller="home"
   data-home-version-value="<%=@version%>">
-></div>
+  <button
+    data-home-target="installButton"
+    data-action="click->home#installApp"
+    type="button"
+    class="text-white hidden bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Install de app</button>
+</div>
